emprestimo de livros via numero.

--- a/code/frontend/src/app/pages/logged/loans/loans.component.html
+++ b/code/frontend/src/app/pages/logged/loans/loans.component.html
@@ -205,8 +205,8 @@
               <span>{{ viewingLoan.memberNome || '-' }}</span>
             </div>
             <div class="detail-item">
-              <label>CPF</label>
-              <span>{{ viewingLoan.memberCpf || '-' }}</span>
+              <label>Telefone</label>
+              <span>{{ viewingLoan.memberPhone || viewingLoan.memberCelular || viewingLoan.memberTelefone || '-' }}</span>
             </div>
             <div class="detail-item">
               <label>Celular</label>
