--- a/code/frontend/src/app/pages/logged/member-management/components/spouse-preview.component.html
+++ b/code/frontend/src/app/pages/logged/member-management/components/spouse-preview.component.html
@@ -7,7 +7,7 @@
   
   @if (!isLoading && hasError) {
     <div class="error-state">
-      <p>Não foi possível carregar as informações do cônjuge ou CPF não encontrado.</p>
+      <p>Não foi possível carregar as informações do cônjuge ou telefone não encontrado.</p>
     </div>
   }
   
@@ -21,9 +21,6 @@
       />
       <div class="spouse-text-details">
         <h3>{{ conjugue.nomeCompleto }}</h3>
-        @if (conjugue.cpf) {
-          <p><strong>CPF:</strong> {{ formatCpf(conjugue.cpf) }}</p>
-        }
         @if (conjugue.celular) {
           <p><strong>Celular:</strong> {{ formatCelular(conjugue.celular) }}</p>
         }
