--- a/code/frontend/src/app/pages/logged/group-management/group-management.component.html
+++ b/code/frontend/src/app/pages/logged/group-management/group-management.component.html
@@ -1,4 +1,4 @@
-<pagetitle title="Gerenciamento de Grupos" subtitle="Gerencie os grupos de voluntariado e atividades"></pagetitle>
+<pagetitle title="Gerenciamento de Voluntariado" subtitle="Gerencie os grupos e seus voluntários."></pagetitle>
 
 <!-- Tabs -->
 <div class="filter-tabs">
@@ -14,7 +14,7 @@
     [class.active]="activeTab === 'members'"
     (click)="switchTab('members')"
   >
-    Membros por Grupo
+    Voluntarios
   </button>
   <button 
     class="tab-button" 
