--- a/code/frontend/src/app/pages/public/adicionar-visitantes/adicionar-visitantes.component.scss
+++ b/code/frontend/src/app/pages/public/adicionar-visitantes/adicionar-visitantes.component.scss
@@ -125,6 +125,7 @@
         padding: 20px;
         background-color: #f9f9f9;
         border-radius: 8px;
+        margin-bottom: 20px;
         border: 1px solid #e0e0e0;
 
         h3 {
