--- a/code/frontend/src/app/pages/logged/attendance/visitor-tab/visitor-management.component.scss
+++ b/code/frontend/src/app/pages/logged/attendance/visitor-tab/visitor-management.component.scss
@@ -68,13 +68,15 @@
 
           .date-range-controls {
             display: flex;
+            justify-content: space-between;
             gap: 15px;
-            flex-wrap: wrap;
+            //flex-wrap: wrap;
             align-items: flex-end;
 
             .date-input-group {
               display: flex;
               flex-direction: column;
+              width: 48%;
               gap: 6px;
 
               label {
@@ -98,6 +100,7 @@
                   transition: all 0.2s ease;
                   font-weight: 500;
                   color: #333;
+                  width: 100%;
 
                   &:focus {
                     outline: none;
