--- a/code/frontend/src/app/pages/logged/attendance/attendance-dashboard.component.html
+++ b/code/frontend/src/app/pages/logged/attendance/attendance-dashboard.component.html
@@ -202,6 +202,7 @@
           [striped]="true"
           [hoverable]="true"
           [enablePagination]="true"
+          [preservePage]="true"
         >
           <ng-template #rowTemplate let-row let-column="column">
             @if (column.key === 'foto') {
