--- a/code/frontend/src/app/pages/public/attendance-checkin/attendance-checkin.component.html
+++ b/code/frontend/src/app/pages/public/attendance-checkin/attendance-checkin.component.html
@@ -91,6 +91,7 @@
       [striped]="true"
       [hoverable]="true"
       [enablePagination]="true"
+      [preservePage]="true"
     >
       <ng-template #rowTemplate let-row let-column="column">
         @if (column.key === 'foto') {
