--- a/code/frontend/src/app/pages/public/adicionar-visitantes/adicionar-visitantes.component.scss
+++ b/code/frontend/src/app/pages/public/adicionar-visitantes/adicionar-visitantes.component.scss
@@ -115,7 +115,7 @@
 
         &.small-width {
           .form-control {
-            max-width: 120px;
+            width: 100%;
           }
         }
       }
